Fix formatting messed up on the client to stylist invite text (#1264)
- Fix formatting messed up on the client to stylist invite text
- Fix no icon for Eyebrows and Lashes category in Client app
- Fix wrong app link is in the sms
- Fix arrow back for the invitation screen

FRON-1322 FRON-1319 FRON-1321 FRON-1325

--- a/mobile/stylist/src/app/services/services-list/services-list.component.scss
+++ b/mobile/stylist/src/app/services/services-list/services-list.component.scss
@@ -28,10 +28,9 @@ page-services-list {
   font-weight: 600;
   border-bottom: 0.55px solid color($colors, color28);
 
-  i {
+  img {
     display: inline-block;
     width: pxtovw(23px);
-    height: pxtovw(23px);
     margin-right: pxtovw(9px);
     vertical-align: middle;
   }
